--- a/setup_guide/docker.env
+++ b/setup_guide/docker.env
@@ -5,9 +5,8 @@ OPENAI_API_KEY=
 
 # CONNECTION DETAILS FOR YOUR SURREAL DB
 # use localhost if using the single container, or surrealdb if using the multi-container
-SURREAL_URL="ws://localhost/rpc:8000"
-SURREAL_USER="root"
-SURREAL_PASSWORD="root"
-SURREAL_NAMESPACE="open_notebook"
-SURREAL_DATABASE="open_notebook"
-
+SURREAL_URL=ws://localhost:8000/rpc
+SURREAL_USER=root
+SURREAL_PASSWORD=root
+SURREAL_NAMESPACE=open_notebook
+SURREAL_DATABASE=open_notebook
